--- a/book.bib
+++ b/book.bib
@@ -68,3 +68,11 @@
   year={2009},
   publisher={Springer}
 }
+
+@book{hedeker2006,
+  title={Longitudinal data analysis},
+  author={Hedeker, Donald and Gibbons, Robert D},
+  volume={451},
+  year={2006},
+  publisher={John Wiley \& Sons}
+}
