--- a/packages.bib
+++ b/packages.bib
@@ -31,8 +31,22 @@
   title = {carData: Companion to Applied Regression Data Sets},
   author = {John Fox and Sanford Weisberg and Brad Price},
   year = {2018},
-  note = {R package version 3.0-1},
+  note = {R package version 3.0-2},
   url = {https://CRAN.R-project.org/package=carData},
+}
+@Manual{R-colorspace,
+  title = {colorspace: Color Space Manipulation},
+  author = {Ross Ihaka and Paul Murrell and Kurt Hornik and Jason C. Fisher and Reto Stauffer and Achim Zeileis},
+  year = {2016},
+  note = {R package version 1.3-2},
+  url = {https://CRAN.R-project.org/package=colorspace},
+}
+@Manual{R-data.table,
+  title = {data.table: Extension of `data.frame`},
+  author = {Matt Dowle and Arun Srinivasan},
+  year = {2018},
+  note = {R package version 1.11.8},
+  url = {https://CRAN.R-project.org/package=data.table},
 }
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
@@ -59,7 +73,7 @@
   title = {furniture: Tables for Quantitative Scientists},
   author = {Tyson S. Barrett and Emily Brignone and Daniel J. Laxman},
   year = {2018},
-  note = {R package version 1.7.9},
+  note = {R package version 1.8.0},
   url = {https://CRAN.R-project.org/package=furniture},
 }
 @Manual{R-ggplot2,
@@ -140,10 +154,10 @@
   url = {https://CRAN.R-project.org/package=nlme},
 }
 @Manual{R-optimx,
-  title = {optimx: A Replacement and Extension of the optim() Function},
+  title = {optimx: Expanded Replacement and Extension of the 'optim' Function},
   author = {John C Nash and Ravi Varadhan},
-  year = {2014},
-  note = {R package version 2013.8.7},
+  year = {2018},
+  note = {R package version 2018-7.10},
   url = {https://CRAN.R-project.org/package=optimx},
 }
 @Manual{R-psych,
@@ -181,6 +195,13 @@ Research},
   year = {2018},
   note = {R package version 1.10},
   url = {https://CRAN.R-project.org/package=rmarkdown},
+}
+@Manual{R-sjPlot,
+  title = {sjPlot: Data Visualization for Statistics in Social Science},
+  author = {Daniel Lüdecke},
+  year = {2018},
+  note = {R package version 2.6.0},
+  url = {https://CRAN.R-project.org/package=sjPlot},
 }
 @Manual{R-sjstats,
   title = {sjstats: Collection of Convenient Functions for Common Statistical
@@ -231,4 +252,11 @@ Computations},
   year = {2017},
   note = {R package version 1.2.1},
   url = {https://CRAN.R-project.org/package=tidyverse},
+}
+@Manual{R-VIM,
+  title = {VIM: Visualization and Imputation of Missing Values},
+  author = {Matthias Templ and Andreas Alfons and Alexander Kowarik and Bernd Prantner},
+  year = {2017},
+  note = {R package version 4.7.0},
+  url = {https://CRAN.R-project.org/package=VIM},
 }
